# CTP-Fantasy

./: .gitignore  Cargo.toml  Rocket.toml  build.rs  gen-ent.sh
.sqlx/: query-0525a1439f34b462fedc1d86050176bac3aab76350bae355e573f9f7ff9f829c.json  query-d26ef8ae9cec1484b4e3aea7ec014c8092566b19bcafcbbb11c195e9e8d275a9.json
api/: Cargo.toml  Rocket.toml
api/src/: authenticate.rs  error.rs  externally_update_internal.rs  lib.rs  main.rs  mutation.rs  query.rs  utils.rs
dto/: Cargo.toml
dto/src/: impls.rs  lib.rs  objects.rs
entity/: Cargo.toml
entity/src/: competition.rs  competition_in_fantasy_tournament.rs  division.rs  fantasy_pick.rs  fantasy_scores.rs  fantasy_tournament.rs  fantasy_tournament_division.rs  lib.rs  phantom_competition.rs  phantom_competition_in_fantasy_tournament.rs  player.rs  player_division.rs  player_division_in_fantasy_tournament.rs  player_in_competition.rs  player_in_tournament.rs  player_round_score.rs  player_trade.rs  prelude.rs  round.rs  sea_orm_active_enums.rs  tournament.rs  user.rs  user_authentication.rs  user_competition_score_in_fantasy_tournament.rs  user_cookies.rs  user_in_fantasy_tournament.rs
http_tests/: make_account.http  tests.http
migration/: Cargo.toml
migration/src/: enums.rs  lib.rs  m20240101_000001_create_users_and_players.rs  m20240101_164644_create_tournaments.rs  m20240101_231414_fantasy_tournament_picks_and_user_score.rs  m20240102_175842_Add_authentication.rs  m20240102_175842_add_authentication.rs  m20240106_182527_make_usernames_more_unique.rs  m20240106_191136_users_in_fantasy_tournament.rs  m20240317_131336_log_exchanges.rs  m20240506_172259_add_round_type.rs  macros.rs
migrations/2023-08-25-133354_add_avatar/: down.sql  up.sql
migrations/2023-09-01-080158_create_first_tables/: down.sql  up.sql
migrations/2023-09-01-083038_add_users/: down.sql  up.sql
migrations/2023-09-01-110704_tournament_running/: down.sql  up.sql
service/: Cargo.toml
service/src/: error.rs  exchange_windows.rs  lib.rs  mutation.rs  pdga_handling.rs  query.rs  scoring.rs
service/src/dto/: forms.rs  mod.rs  mutation.rs  pdga.rs  player_trading.rs  query.rs  scoring_visualisation.rs  user_attribute.rs
service/src/dto/pdga/: fetch_people.rs  get_competition.rs  mod.rs  player_scoring.rs
src/: main.rs  models.rs  pdga_handling.rs  schema.rs
tests/: mock.rs
