[package]
name = "ctp_fantasy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
reqwest = { version = "0.11.20", features = ["json", "serde_json"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = "1.0.186"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "mock" ] }
entity = { path = "./entity" }
migration = { path = "./migration" }
itertools = "0.12.0"
api = { path = "./api" }
rocket = "0.5.0"


[workspace]
members = [".", "entity", "migration", "service", "api", "dto"]
