[package]
name = "ctp_fantasy"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
reqwest = { version = "0.11.20", features = ["json", "serde_json"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = "1.0.186"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
entity = { path = "./entity" }
migration = { path = "./migration" }
itertools = "0.12.0"
api = { path = "./api" }
rocket = "0.5.0"
service = {path = "./service" }

[workspace]
members = [".", "entity", "migration", "service", "api"]

[build-dependencies]
dotenvy = "0.15.7"

[[test]]
name = "mock"

[features]
mock = ["sea-orm/mock"]
required-features = ["mock"]


[dev-dependencies]
migration = { path = "./migration" }
