[package]
name = "ctp_fantasy"
version = "0.1.0"
edition = "2021"
#build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
reqwest = { version = "0.11.20", features = ["json", "serde_json"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = "1.0.186"
entity = { path = "./entity" }
itertools = "0.12.0"
api = { path = "./api" }
rocket = "0.5.0"
service = {path = "./service" }
chrono = "0.4.33"


[dependencies.sea-orm]
version = "0.12.14"
features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]

[workspace]
members = [".", "entity", "service", "api"]

[build-dependencies]
dotenvy = "0.15.7"

[[test]]
name = "mock"




[dev-dependencies]
migration = { path = "./migration" }


[profile.dev.package.rtz]
opt-level = 3
[profile.test.package.rtz]
opt-level = 3


[profile.profiling]
inherits = "release"
debug = true
debug-assertions = true
