[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
rocket = { version = "0.5.0", features = ["json", "serde_json", "tls", "secrets"] }
sea-orm = "0.12.10"
service = { path = "../service" }
entity = { path = "../entity" }
dotenvy = "0.15"
sqlx = {version =  "0.7.3", features = ["postgres"] }
rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc"] }
serde = { version = "1.0.193", features = ["derive"] }
