[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
rocket = { version = "0.5.0", features = ["json", "serde_json", "tls", "secrets"] }
sea-orm = "0.12.14"
service = { path = "../service" }
entity = { path = "../entity" }
dotenvy = "0.15"
sqlx = {version =  "0.7.4", features = ["postgres"] }
rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = "1.36.0"
rocket_cors = "0.6.0"
reqwest = { version = "0.12.0", features = ["stream"] }
uuid = { version = "1.7.0", features = ["v4"] }
