[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
sea-orm = "0.12.10" # sea-orm version
serde = { version = "1.0.193", features = ["derive"] }

[lib]
name = "entity"
path = "src/lib.rs"