[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
entity = { path = "../entity" }
serde = { version = "1.0.193", features = ["derive"] }
itertools = "0.12.0"
serde_derive = "1.0.193"
serde_json = "1.0.105"
reqwest = { version = "0.11.23", features = ["serde_json", "json"] }
dotenvy = "0.15"
tokio = "1.35.1"
rocket_okapi = "0.8.0"
bcrypt = "0.15.0"
rand = "0.8.4"
rocket = { version = "0.5.0", features = ["secrets"] }
sqlx = {version =  "0.7.3", features = ["postgres"] }
chrono = "0.4.32"
strum = "0.26.1"
strum_macros = "0.26.1"
log = "0.4.20"
dateparser = "0.2.1"
rtz = {version= "*", default-features = false, features = ["tz-osm", "tz-ned"] }
geocoding = { version = "*", default-features = false, features = ["rustls-tls"] }
chrono-tz = "0.8.5"
cached = {version= "0.48.1", features = ["async"] }
serde_with = "3.6.1"

[dependencies.sea-orm]
version = "0.12.10" # sea-orm version
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
]

[dev-dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt"] }
